--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/ioredis": "^4.0.12",
-    "@types/jsonwebtoken": "^8.3.2"
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/ms": "^0.7.30"
   },
   "dependencies": {
     "@chattr/types": "^0.0.1",
@@ -25,6 +26,7 @@
     "graphql-redis-subscriptions": "^2.1.0",
     "graphql-subscriptions": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
+    "ms": "^2.1.2",
     "pg": "^7.11.0",
     "subscriptions-transport-ws": "^0.9.16",
     "typeorm": "^0.2.18",
