--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -12,8 +12,10 @@
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
     "apollo-link-http": "^1.5.15",
+    "dayjs": "^1.8.15",
     "formik": "^1.5.7",
     "graphql": "^14.4.2",
+    "ms": "^2.1.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/ms": "^0.7.30",
     "@types/react-router-dom": "^4.3.4",
     "node-sass": "^4.12.0"
   }
