--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -2,16 +2,17 @@
   "name": "@chattr/backend",
   "version": "0.0.1",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "./src/index.ts",
   "scripts": {
-    "start": "node .",
-    "dev": "NODE_ENV=development PORT=3001 nodemon --inspect ."
+    "start": "ts-node .",
+    "dev": "NODE_ENV=development PORT=3001 nodemon --inspect"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/ioredis": "^4.0.12",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/ms": "^0.7.30"
+    "@types/ms": "^0.7.30",
+    "ts-node": "^8.5.2"
   },
   "dependencies": {
     "@chattr/types": "^0.0.1",
@@ -30,6 +31,15 @@
     "pg": "^7.11.0",
     "subscriptions-transport-ws": "^0.9.16",
     "typeorm": "^0.2.18",
-    "typescript": "^3.4.5"
+    "typescript": "^3.7.2"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts",
+    "execMap": {
+      "ts": "yarn start"
+    }
   }
 }
