--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -3,32 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^0.1.0-beta.10",
+    "@apollo/react-hooks": "^3.1.3",
     "@chattr/types": "^0.0.1",
-    "@types/jest": "24.0.15",
-    "@types/node": "12.0.8",
-    "@types/react": "16.8.20",
-    "@types/react-dom": "16.8.4",
+    "@types/jest": "^24.0.23",
+    "@types/node": "12.12.8",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
     "apollo-link-http": "^1.5.15",
     "dayjs": "^1.8.15",
-    "formik": "^1.5.7",
+    "formik": "^2.0.4",
     "graphql": "^14.4.2",
     "ms": "^2.1.2",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.8",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "typescript": "3.5.2"
+    "react-scripts": "3.3.0-next.62",
+    "typescript": "3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm-run-all -p start:css start:js",
+    "build": "npm-run-all build:css build:js",
+    "start:js": "react-scripts start",
+    "build:js": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:css": "postcss src/content/site.tailwind.css -o src/content/site.css -w",
+    "build:css": "postcss src/content/site.tailwind.css -o src/content/site.css --env production"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,8 +50,12 @@
     ]
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@types/ms": "^0.7.30",
-    "@types/react-router-dom": "^4.3.4",
-    "node-sass": "^4.12.0"
+    "@types/react-router-dom": "^5.1.2",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^6.1.3",
+    "purgecss": "^1.4.1",
+    "tailwindcss": "^1.1.3"
   }
 }
